// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedButtonItem Basic SegmentedButtonItem 1`] = `
<li
  class="SegmentedButtonItem-segmentedButtonItem-0 SegmentedButtonItem-focusableItem-0"
  data-has-own-width="false"
  id="1"
>
  <div
    class="SegmentedButtonItem-icon-0 SegmentedButtonItem-withText-0"
  >
    <ui5-icon
      name="add"
    />
  </div>
  My Item
</li>
`;

exports[`SegmentedButtonItem SegmentedButtonItem Disabled 1`] = `
<li
  class="SegmentedButtonItem-segmentedButtonItem-0 SegmentedButtonItem-iconOnly-0 SegmentedButtonItem-disabled-0"
  data-has-own-width="false"
  id="1"
>
  <div
    class="SegmentedButtonItem-icon-0"
  >
    <ui5-icon
      name="add"
    />
  </div>
</li>
`;

exports[`SegmentedButtonItem SegmentedButtonItem Icon Only 1`] = `
<li
  class="SegmentedButtonItem-segmentedButtonItem-0 SegmentedButtonItem-iconOnly-0 SegmentedButtonItem-focusableItem-0"
  data-has-own-width="false"
  id="1"
>
  <div
    class="SegmentedButtonItem-icon-0"
  >
    <ui5-icon
      name="add"
    />
  </div>
</li>
`;

exports[`SegmentedButtonItem SegmentedButtonItem onClick 1`] = `
<li
  class="SegmentedButtonItem-segmentedButtonItem-0 SegmentedButtonItem-iconOnly-0 SegmentedButtonItem-focusableItem-0"
  data-has-own-width="false"
  id="1"
>
  <div
    class="SegmentedButtonItem-icon-0"
  >
    <ui5-icon
      name="add"
    />
  </div>
</li>
`;

exports[`SegmentedButtonItem Selected SegmentedButtonItem 1`] = `
<li
  class="SegmentedButtonItem-segmentedButtonItem-0 SegmentedButtonItem-focusableItem-0 SegmentedButtonItem-selected-0"
  data-has-own-width="false"
  id="1"
>
  <div
    class="SegmentedButtonItem-icon-0 SegmentedButtonItem-withText-0"
  >
    <ui5-icon
      name="add"
    />
  </div>
  My Item
</li>
`;
